[package]
name = "client"
version = "0.1.0"
authors = ["aberic <100309595@qq.com>"]
license = "Apache-2.0"
description = "George DB client"
repository = "https://github.com/aberic/george/client"
readme = "../README.md"
keywords = ["client"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comm = { path = "../comm", version = "0.1.0" }
deploy = { path = "../deploy", version = "0.1.0" }
db = { path = "../db", version = "0.1.0" }
rpc = { path = "../rpc", version = "0.1.0" }
clap = "~2.32"
cli-table = "0.4"
