[package]
name = "comm"
version = "0.1.0"
authors = ["aberic <100309595@qq.com>"]
license = "Apache-2.0"
description = "Common tool library"
repository = "https://github.com/aberic/george/comm"
readme = "../README.md"
keywords = ["common"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.30"
openssl-sys = "0.9.58"
phf = { version = "0.8.0", features = ["macros"] }
phf_macros = "0.8.0"
serde = "1.0.117"
serde_json = "1.0.59"
serde_yaml = "0.8.13"
lazy_static = "1.4.0"
crc32fast = "1.2.0"
crc64fast = "1.0.0"
hex = "0.4.2"
rust-crypto = "0.2.36"
libsm = { git = "https://github.com/citahub/libsm", version = "0.3.0" }