[package]
name = "comm"
version = "0.1.0"
authors = ["aberic <100309595@qq.com>"]
license = "Apache-2.0"
description = "Common tool library"
repository = "https://github.com/aberic/george/comm"
readme = "../README.md"
keywords = ["common"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.34"
openssl-sys = "0.9.63"
phf = { version = "0.8.0", features = ["macros"] }
phf_macros = "0.8.0"
serde = "1.0.125"
serde_yaml = "0.8.17"
serde_json = "1.0.64"
lazy_static = "1.4.0"
crc32fast = "1.2.1"
crc64fast = "1.0.0"
hex = "0.4.3"
libsm = { git = "https://github.com/citahub/libsm", version = "0.4.0" }
rand = "0.8.3"
num-bigint = "0.2"
Cupcake = "0.1.1"

# paillier = "0.2.0"
# paillier = { git = "https://github.com/KZen-networks/rust-paillier", version = "0.3.10" }
# zk-paillier = { git = "https://github.com/ZenGo-X/zk-paillier", version = "0.3.12" }