[package]
name = "db"
version = "0.1.0"
authors = ["aberic <100309595@qq.com>"]
license = "Apache-2.0"
description = "The underlying dependencies provided to the database implementation"
repository = "https://github.com/aberic/george/db"
readme = "../README.md"
keywords = ["db"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde/derive"]

[dependencies]
log = "0.4.11"
log4rs = "0.13.0"
chrono = "0.4.19"
serde = "1.0.117"
serde_yaml = "0.8.14"
comm = { path = "../comm", version = "0.1.0" }
logs = { path = "../logs", version = "0.1.0" }
lazy_static = "1.4.0"
once_cell = "1.4.1"
hex = "0.4.2"