[package]
name = "db"
version = "0.1.0"
authors = ["aberic <100309595@qq.com>"]
license = "Apache-2.0"
description = "The underlying dependencies provided to the database implementation"
repository = "https://github.com/aberic/george/db"
readme = "../README.md"
keywords = ["db"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde/derive"]

[dependencies]
log = "0.4.14"
log4rs = "1.0.0"
chrono = "0.4.19"
serde = "1.0.125"
serde_yaml = "0.8.17"
serde_json = "1.0.64"
comm = { path = "../comm", version = "0.1.0" }
logs = { path = "../logs", version = "0.1.0" }
lazy_static = "1.4.0"
once_cell = "1.7.2"
hex = "0.4.3"
num-integer = "0.1.44"