[package]
name = "deploy"
version = "0.1.0"
authors = ["aberic <100309595@qq.com>"]
license = "Apache-2.0"
description = "Deploy config library"
repository = "https://github.com/aberic/george/deploy"
readme = "../README.md"
keywords = ["deploy"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
log4rs = "1.0.0"
serde = "1.0.126"
serde_yaml = "0.8.17"
comm = { path = "../comm", version = "0.1.0" }
logs = { path = "../logs", version = "0.1.0" }
