[package]
name = "ge"
version = "0.1.0"
authors = ["aberic <100309595@qq.com>"]
license = "Apache-2.0"
description = "The file parsing service for ge"
repository = "https://github.com/aberic/george/ge"
readme = "../README.md"
keywords = ["ge"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde/derive"]

[dependencies]
serde = "1.0.126"
comm = { path = "../comm", version = "0.1.0" }