[package]
name = "george-client"
version = "0.1.0"
authors = ["aberic <100309595@qq.com>"]
license = "Apache-2.0"
description = "George DB client"
repository = "https://github.com/aberic/george/george-client"
readme = "../README.md"
keywords = ["client"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
george-comm = { path = "../george-comm", version = "0.1.0" }
george-deploy = { path = "../george-deploy", version = "0.1.0" }
george-db = { path = "../george-db", version = "0.1.0" }
george-rpc = { path = "../george-rpc", version = "0.1.0" }
clap = "~2.32"
cli-table = "0.4"
