[package]
name = "protocols"
version = "0.1.0"
authors = ["aberic <100309595@qq.com>"]
license = "Apache-2.0"
description = "Log secondary library"
repository = "https://github.com/aberic/george/protocols"
readme = "../README.md"
keywords = ["protocols"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comm = { path = "../comm", version = "0.1.0" }
logs = { path = "../logs", version = "0.1.0" }
tonic = "0.4.3"
prost = "0.7"
prost-types = "0.7"

[build-dependencies]
tonic-build = "0.4.2"
prost-build = "0.7"

