[package]
name = "protocols"
version = "0.1.0"
authors = ["aberic <100309595@qq.com>"]
license = "Apache-2.0"
description = "Protobuf secondary library"
repository = "https://github.com/aberic/george/protocols"
readme = "../README.md"
keywords = ["protocols"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grpc = "0.8.3"
grpc-protobuf = "0.8.3"
protobuf = "~2.18.2"
futures = "0.3.*"
tls-api = "0.4.*"
tls-api-native-tls = "0.4.*"
env_logger = "0.4.*"
rand = "0.5.5"
json = "0.11.*"

[build-dependencies]
protoc-rust-grpc = "0.8.3"
protoc-rust = "2.17.0"

