[package]
name = "rpc"
version = "0.1.0"
authors = ["aberic <100309595@qq.com>"]
license = "Apache-2.0"
description = "Protobuf impl library"
repository = "https://github.com/aberic/george/rpc"
readme = "../README.md"
keywords = ["rpc"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comm = { path = "../comm", version = "0.1.0" }
db = { path = "../db", version = "0.1.0" }
tonic = { version = "0.4.3", features = ["tls"]  }
prost = "0.7.0"
tokio = { version = "1.8.1", features = ["full"] }
tower = "0.4.8"
openssl = "0.10.35"
hyper = "0.14.10"
hyper-openssl = "0.9.1"

[build-dependencies]
tonic-build = "0.4.2"
