[package]
name = "server"
version = "0.1.0"
authors = ["aberic <100309595@qq.com>"]
license = "Apache-2.0"
description = "George DB service"
repository = "https://github.com/aberic/george/server"
readme = "../README.md"
keywords = ["server"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
log4rs = "1.0.0"
comm = { path = "../comm", version = "0.1.0" }
db = { path = "../db", version = "0.1.0" }
logs = { path = "../logs", version = "0.1.0" }
deploy = { path = "../deploy", version = "0.1.0" }
protocols = { path = "../protocols", version = "0.1.0" }
grpc = "0.8.3"
protobuf = "~2.18.2"
clap = "~2.32"
tokio = { version = "1.6.1", features = ["full"] }
